<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/image"
        android:layout_width="142dp"
        android:layout_height="82dp"
        android:layout_marginRight="16dp"
        tools:src="@drawable/item_shell_red" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="8dp"
        android:layout_toRightOf="@+id/image"
        android:textSize="16dp"
        android:textStyle="bold"
        tools:text="@string/acorn" />

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_toRightOf="@+id/image"
        android:textSize="16dp"
        tools:text="@string/event_acorn" />
</merge>