<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/player_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerInParent="true"
        android:layout_marginRight="16dp"
        android:textColor="@color/green"
        android:textSize="34dp"
        android:textStyle="bold"
        tools:text="P1" />

    <TextView
        android:id="@+id/player_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toLeftOf="@+id/forfeit_or_share"
        android:layout_toRightOf="@+id/player_number"
        android:textSize="16dp"
        tools:text="Matthew Ott" />

    <ImageView
        android:id="@+id/forfeit_or_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:src="@drawable/gameinfo_red_x" />
</merge>